src/main/webapp/css/style.css
header h1 {
	font-size: 3em;
	font-family: 'Playfair Display', serif;
}

body {
	margin: 0 auto;
	max-width: 50em;
	background-color: #d5ca9f;
}

body {
	text-align: center;
	color: #555;
	font-family: 'Fauna One', serif;
}

li a {
	color: #555;
	text-decoration: none;
}

#nav-bar {
	height: 3em;
}

#nav-bar {
	border-bottom: 2px solid #555;
	border-top: 2px solid #555;
}

#nav-links {
	height: 100%;
	list-style-type: none;
	margin: 0 10% 0 10%;
	padding: 0;
}

#nav-links li {
	height: 100%;
	display: inline-block;
	width: 16%;
}

#nav-links li {
	text-align: center;
}

#nav-links li a {
	display: block;
	margin-top: .8em;
}

#nav-links li:hover {
	background-color: #ececec;
}

.track-pic {
	width: 100px;
	height: auto;
}

.last-5-items {
	width: 120px;
	background-color: #edead6;
	position: fixed;
	right: 5%;
	top: 5%;
}

.item-box {
	height: 60em;
}

.item-row1, .item-row2, .item-row3 {
	height: 33%;
}

.item-individual {
	width: 24%;
	//margin: 4px;
	background-color: #edead6;
	float: left;
	height: 98%;
}

.item-individual h3 {
	text-align: center;
}

.item-image-container img {
  
	width: 150px;
	height: auto;
	top: 20%;
}

.content-top-text {
	padding: 5px;
}

.content-bottom-text-left {
	width: 50%;
	float: left;
}

.content-bottom-text-right {
	width: 50%;
	float: right;
}

footer {
	padding: .5em 0 .5em 0;
	margin-top: .5em;
	float: left;
	display: block;
	width: 100%;
	border-top: 2px solid #555;
}

#copyright {
	display: inline-block;
	float: left;
}

#social-info {
	display: inline-block;
	float: right;
}

#social-info i {
	margin: 0 auto;
}

/*Product Page Specific*/
.big-pic-container {
	float: left;
}

.item-pic {
	width: 300px;
	height: auto;
	transition: 0.3s ease;
	border: 1px white solid;
	margin: 10px;
}

.item-pic:hover {
	transform: scale(1.5, 1.5);
}

.item-description {
	width: 50%;
	float: right;
	padding-left: 25px;
	padding-right: 25px;
	padding-bottom: 25px;
}

.item-description p {
	text-align: left;
}

.order-button {
	background-color: #a5580f;
	color: white;
	padding-left: 30px;
	padding-right: 30px;
	text-align: center;
	display: inline-block;
}

.preview-row {
	float: left;
	height: 175px;
	width: 750px;
}

.preview-box {
	float: left;
	padding: 15px;
}

.small-pic {
	height: 150px;
	width: auto;
	border: 1px white solid;
}

.detail-box {
	background-color: #edead6;
	padding: 20px;
	margin-top: 10px;
	height: 550px;
}

.orderDetails {
	margin: auto;
	display: table;
}

.orderDetails p {
	display: table-row;
}

.orderDetails label {
	display: table-cell;
}

/*Modal Page Specific*/
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: none;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #fefefe;
    margin: 10% auto;
    padding: 20px;
    width: 30%;
	height: 65%;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    cursor: pointer;
}

.modal-content p {
	font-family: 'Fauna One', serif;
}

.form-content {
	max-width: 100%;
}

.formButton {
	margin: 0 auto;
	left: 50%;
}

form {
	max-width: 70%;
	margin: 0 auto;
}


form p * {
	float: left;
}

